# decimalog

./: .copier-answers.yml  .cruft.json  .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html
api/: index.html
docs/: api.md
logs/: app_log.jsonl
search/: search_index.json
src/decima/: __init__.py  logger.py
src/decimalog/: __init__.py  logger.py
src/logger_captain/: logger.py
src/logger_captain/cfg/: log_configuration.py
test/: test_logger.py
