#:schema https://json.schemastore.org/pyproject.json
#:schmea https://json.schemastore.org/ruff.json

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/decima"]

[project]
name = "decima"
version = "0.1.0"
description = "Custom Logger"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-include-markdown-plugin>=7.2.1",
    "mkdocs-material>=9.7.2",
    "mkdocstrings[python]>=1.0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.1",
    "ty>=0.0.17",
]

[tool.uv]
managed = true

[tool.ty.environment]
python = "./.venv/bin/python"
python-version = "3.12"
root = ["src"]
